gateways/default/gateway-default.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  name: nginx
spec:
  gatewayClassName: nginx
  listeners:
    - hostname: k8s.example.com
      name: k8s-example-com-http
      port: 80
      protocol: HTTP
status: { }
